tests/topHandlerConstant.m31.ref
File "./topHandlerConstant.m31", line 12, characters 13-18: Syntax error
  Unexpected: reduce
